wassup, you dont even

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <body>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r78/three.js'></script>
     <script src='OrbitControls.js'></script>
+    <script src='cards.js'></script>
     <!-- <script src='space.js'></script> -->
-    <script src='cubes.js'></script>
+    <!-- <script src='cubes.js'></script> -->
     <script src='audio.js'></script>
   </body>
 </html>
