card resize power of 2, new song, collision detection, 3rd-person player object

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r78/three.js'></script>
     <script src='OrbitControls.js'></script>
+    <script src='FirstPersonControls.js'></script>
     <script src='cards.js'></script>
     <!-- <script src='space.js'></script> -->
     <!-- <script src='cubes.js'></script> -->
