Wave forms and harmonics

--- a/maximilian/index.html
+++ b/maximilian/index.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Intro to using maximilian (originally C++ audio library)</h1>
     <script src="http://doc.gold.ac.uk/~mus02mg/_maxiLib.js"></script>
-    <script src="maximilian.js"></script>
+    <script src="soundSynthesis.js"></script>
   </body>
 </html>
